# pytorch-ssdir

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  results.tar.gz.dvc
.dvc/: config
.github/workflows/: ci.yml
dockerfiles/: Dockerfile.basic  Dockerfile.dev  Dockerfile.prod
experiments/: .gitignore  Untitled-Copy1.ipynb  Untitled.ipynb  detect.py  get_representations.py  grid_detector.py  grid_tracker.py  images.py  reconstructions.png.dvc  reconstructions_clevr.png.dvc  reconstructions_mnist.png.dvc  reconstructions_mot15.png.dvc  reconstructions_wider.png.dvc  representations.pickle.dvc  run_mot_challenge.py  track.py  tsne_hor.png.dvc
pretrained/hub/checkpoints/: .gitignore
pytorch_ssdir/: __init__.py  main.py
pytorch_ssdir/modeling/: __init__.py  decoder.py  depth.py  encoder.py  model.py  models.py  present.py  what.py  where.py
pytorch_ssdir/run/: transforms.py
runs/: .gitignore  scale_batch_size_temp_model.ckpt.dvc
runs/ssdir/0gsvvz1e/: .gitignore  ckpt-epoch=31-val_loss=1.45.ckpt.dvc
runs/ssdir/10firw8q/: .gitignore  ckpt-epoch=10-val_loss=1.63.ckpt.dvc
runs/ssdir/12sg0gfi/: ckpt-epoch=29-val_loss=nan.ckpt.dvc
runs/ssdir/153dt96q/: .gitignore  ckpt-epoch=29-val_loss=nan.ckpt.dvc
ssdir/: __init__.py  cli.py  main.py
ssdir/modeling/: __init__.py  depth.py  models.py  present.py  utils.py  what.py  where.py
ssdir/run/: loss.py  transforms.py  utils.py  visualize.py
tests/: conftest.py  test_decoder.py  test_depth.py  test_model.py  test_models.py  test_present.py  test_run_utils.py  test_utils.py  test_what.py  test_where.py
(+186 files in other folders)
