[tool.poetry]
name = "ssdir"
version = "0.1.0"
description = "Single Shot Multi-Box Detect Infer & Repeat implementation in PyTorch"
authors = ["Piotr Zieliński <piotrekzie100@gmail.com>"]
packages = [
    { include = "ssdir" }
]

[[tool.poetry.source]]
name = "trasee"
url = "https://pypi.trasee.io/simple/"

[tool.poetry.dependencies]
python = "^3.8"
ssd = { version = "0.1.0", source = "trasee" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.0"

[tool.poetry.scripts]
ssdir = "ssdir.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
